position factor unlocked

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </nav>
-            <section class="mt-6 lg:mt-12">
+            <section class="mt-6 lg:mt-12 relative">
                 <div class="carousel w-full rounded-xl lg:rounded-lg">
                     <div id="slide1" style="background-image: url(images/banner4.png);"
                         class="carousel-item relative w-full bg-center bg-no-repeat bg-cover bg-[linear-gradient(180deg,rgb(18,18,18) 85.583%,rgba(18,18,18,0) 100%)]">
@@ -149,8 +149,34 @@
                     </div>
                 </div>
 
+                <div class="hidden lg:flex absolute left-1/2 transform -translate-x-1/2 -translate-y-1/2 ">
+                    <div class="flex p-8 rounded-xl shadow-lg  bg-white">
+                        <div>
+                            <img class="w-full" src="images/fruit1.png" alt="">
+                            <p class="text-center">Strawberry</p>
+                        </div>
+                        <div>
+                            <img class="w-full" src="images/fruit2.png" alt="">
+                            <p class="text-center">Orange</p>
+                        </div>
+                        <div>
+                            <img class="w-full" src="images/fruit3.png" alt="">
+                            <p class="text-center">Mango</p>
+                        </div>
+                        <div>
+                            <img class="w-full" src="images/fruit4.png" alt="">
+                            <p class="text-center">Litchi</p>
+                        </div>
+                        <div>
+                            <img class="w-full" src="images/fruit5.png" alt="">
+                            <p class="text-center">Mango</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </section>
-            section
+
 
         </div>
     </main>
